# Exam_Rust

./: README.md
Exam_project_Rust/: .gitignore  Cargo.toml
Exam_project_Rust/src/: downloader.rs  main.rs  model.rs  progress.rs  thumbnail.rs
