[package]
name = "Exam_project_Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
rust-embed = "8"
once_cell = "1.19"
rfd = "0.7"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
